# candle

./: Cargo.toml  candle_layers.txt  candle_output.txt  diag_a_b_n1.txt  instr_count_attack_n1.txt  int8_tile_n1.txt  int8_tile_n1_reg.txt  int8_tile_shape_sweep_n1.txt  m1_vs_newest_llama.txt  packed_fullmodel_ab_n1.txt  packed_nc_tile_ab_n1.txt  perf_stat_n1.txt  prefill_profile_n1.txt  repack_microbench_n1.txt  xr_r8_sweep_n1.txt
.github/workflows/: ci_cuda.yaml
candle-core/examples/: barrier_cost.rs  embcheck.rs  hand_asm_probe.rs  lane_layout_probe.rs  q4k_kernel_attr.rs  q4k_pack_sweep.rs  qbench.rs
candle-core/src/: utils.rs
candle-core/src/cpu/: mod.rs
candle-core/src/cpu_backend/: mod.rs  utils.rs
candle-core/src/quantized/: ggml_file.rs  gguf_file.rs  k_quants.rs  metal.rs  mod.rs  neon.rs  repack.rs  simd128.rs
candle-core/tests/: quantized_tests.rs
candle-datasets/src/: ragged.rs
candle-examples/: Cargo.toml  inspect_gguf.py  profile.nsys-rep  validate_qwen3.py  validate_simple.py  validate_smollm3.py
candle-examples/examples/: check_shapes.rs  compare_smollm3_weights.rs  deleaf_qk.rs  find_outliers.rs  test_interleave.rs  test_permutation.rs
candle-examples/examples/gguf-requant/: main.rs
candle-examples/examples/llama/: main.rs
candle-examples/examples/llava/: main.rs
candle-examples/examples/quantized-qwen3/: main.rs
candle-examples/examples/quantized-qwen3-bench/: main.rs
candle-examples/examples/quantized-qwen3-ppl/: main.rs
candle-examples/examples/quantized-smollm3/: main.rs
candle-examples/examples/qwen/: main.rs
candle-examples/examples/smollm3/: main.rs
candle-examples/examples/translate-gemma/: main.rs
candle-kernels/src/: cuda_utils.cuh  ffi.rs  mmvq_gguf.cu  reduce.cu
candle-metal-kernels/: Cargo.toml
candle-nn/: Cargo.toml
candle-nn/src/: kv_cache.rs  lib.rs  lora.rs  ops.rs  optim.rs  rotary_emb.rs  simd_flash_attention.rs
candle-nn/src/attention/cpu_flash/: causal.rs  mod.rs  online_softmax.rs  standard.rs  varlen.rs
candle-nn/tests/: cpu_flash_attn.rs
candle-transformers/: Cargo.toml
candle-transformers/src/: quantized_nn.rs
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: llama.rs  mod.rs  quantized_qwen3.rs  quantized_qwen3_simd.rs  qwen3.rs  qwen3_simd.rs
candle-transformers/src/models/gemma/: gemma3.rs  quantized_gemma3.rs
candle-transformers/src/models/gemma4/: mod.rs
candle-transformers/src/models/llava/: mod.rs
candle-transformers/src/models/smol/: README.md  mod.rs  quantized_smollm3.rs  quantized_smollm3_deleave.rs  smollm3.rs
candle-transformers/tests/: test_gelu.rs  test_gemma3.rs
candle-wasm-examples/quant-qwen3/: Cargo.toml  index.html  serve.py
candle-wasm-examples/quant-qwen3/src/: lib.rs  m.rs  profiler.rs
candle-wasm-examples/qwen3/: Cargo.toml  index.html  serve.py
candle-wasm-examples/qwen3/src/: m.rs
